@@ -1,5 +1,5 @@
 /*
- * $Id: tables.h,v 1.73 2010/05/02 23:47:03 sfeam Exp $
+ * $Id: tables.h,v 1.74 2010/06/26 05:43:28 sfeam Exp $
  */
 
 /* GNUPLOT - tables.h */
@@ -182,7 +182,8 @@ enum test_id {
 enum show_style_id {
     SHOW_STYLE_INVALID,
     SHOW_STYLE_DATA, SHOW_STYLE_FUNCTION, SHOW_STYLE_LINE,
-    SHOW_STYLE_FILLING, SHOW_STYLE_ARROW, SHOW_STYLE_RECTANGLE,
+    SHOW_STYLE_FILLING, SHOW_STYLE_ARROW, 
+    SHOW_STYLE_CIRCLE, SHOW_STYLE_RECTANGLE,
     SHOW_STYLE_INCREMENT, SHOW_STYLE_HISTOGRAM, SHOW_STYLE_BOXPLOT
 };
 
