@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: unset.c,v 1.134 2010/05/02 20:56:09 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: unset.c,v 1.135 2010/06/26 05:43:28 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - unset.c */
@@ -91,6 +91,7 @@ static void unset_linetype __PROTO((void));
 static void unset_object __PROTO((void));
 static void delete_object __PROTO((struct object * prev, struct object * this));
 static void unset_style_rectangle __PROTO(());
+static void unset_style_circle __PROTO(());
 #endif
 static void unset_loadpath __PROTO((void));
 static void unset_locale __PROTO((void));
@@ -1349,6 +1350,7 @@ unset_style()
 	unset_fillstyle();
 #ifdef EAM_OBJECTS
 	unset_style_rectangle();
+	unset_style_circle();
 #endif
 	unset_histogram();
 	unset_boxplot();
@@ -1389,6 +1391,7 @@ unset_style()
 #ifdef EAM_OBJECTS
     case SHOW_STYLE_RECTANGLE:
 	unset_style_rectangle();
+	unset_style_circle();
 	c_token++;
 	break;
 #endif
@@ -1630,6 +1633,7 @@ reset_command()
     while (first_object != NULL)
 	delete_object((struct object *) NULL, first_object);
     unset_style_rectangle();
+    unset_style_circle();
 #endif
 
     /* 'polar', 'parametric' and 'dummy' are interdependent, so be
@@ -1752,6 +1756,13 @@ unset_style_rectangle()
 {
     struct object foo = DEFAULT_RECTANGLE_STYLE;
     default_rectangle = foo;
+    return;
+}
+static void
+unset_style_circle()
+{
+    struct object foo = DEFAULT_CIRCLE_STYLE;
+    default_circle = foo;
     return;
 }
 #endif
